# KTH-ID2207

./: README.md
project-assignment/django-workflow-backend/: db.sqlite3  pyproject.toml
project-assignment/django-workflow-backend/apps/budget_approvals/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
project-assignment/django-workflow-backend/apps/budget_approvals/migrations/: 0001_initial.py  0002_initial.py  0003_remove_budgetapproval_approved_amount_and_more.py
project-assignment/django-workflow-backend/apps/event_requests/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
project-assignment/django-workflow-backend/apps/event_requests/migrations/: 0001_initial.py  0002_initial.py  0003_eventrequest_client_name_and_more.py
project-assignment/django-workflow-backend/apps/recruitments/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
project-assignment/django-workflow-backend/apps/recruitments/migrations/: 0001_initial.py  0002_initial.py
project-assignment/django-workflow-backend/apps/task_assignments/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
project-assignment/django-workflow-backend/apps/task_assignments/migrations/: 0001_initial.py  0002_initial.py
project-assignment/django-workflow-backend/apps/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
project-assignment/django-workflow-backend/apps/users/migrations/: 0001_initial.py
project-assignment/django-workflow-backend/config/: asgi.py  settings.py  urls.py  wsgi.py
(+30 files in other folders)
